adding ES exercise to index

--- a/content/index.html
+++ b/content/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-08">
+<meta name="dcterms.date" content="2024-05-09">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 8, 2024</p>
+        <p class="date">May 9, 2024</p>
       </div>
     </div>
     
@@ -129,7 +129,7 @@ ul.task-list li input[type="checkbox"] {
 <h5 class="anchored" data-anchor-id="technical-soil-services-management">11. <a href="https://ncss-tech.github.io/nasis_training/content/tss.html">Technical Soil Services Management</a></h5>
 </section>
 <section id="ecological-and-vegetation-data" class="level5">
-<h5 class="anchored" data-anchor-id="ecological-and-vegetation-data">12. Ecological and Vegetation Data</h5>
+<h5 class="anchored" data-anchor-id="ecological-and-vegetation-data">12. <a href="https://ncss-tech.github.io/nasis_training/content/veg.html">Ecological and Vegetation Data</a></h5>
 </section>
 </section>
 
