updated record ids to match

--- a/content/query-load.html
+++ b/content/query-load.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-08">
+<meta name="dcterms.date" content="2024-12-03">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 8, 2024</p>
+        <p class="date">December 3, 2024</p>
       </div>
     </div>
     
@@ -127,8 +127,8 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="accept-the-data-into-your-local-database" class="level3">
 <h3 class="anchored" data-anchor-id="accept-the-data-into-your-local-database">Accept the Data into your Local Database</h3>
-<p>If you have a significant amount of data in your local database already, you might want to clear your local database for this course. To do this select the “Clear Local Database” button. If you do, you will need to run the previous query again. On the legend tab select the row with the Rec ID = 17013. Notice you can use sorting and the auto filter row in this view but not the filter editor.</p>
-<p>After selecting the row click the “Exclude” button. What do you see different in the “Location” column?</p>
+<p>If you have a significant amount of data in your local database already, you might want to clear your local database for this course. To do this select the “Clear Local Database” button. If you do, you will need to run the previous query again. On the legend tab select the rows with the Rec ID = 129780 and 14033. Notice you can use sorting and the auto filter row in this view but not the filter editor.</p>
+<p>After selecting the rows click the “Exclude” button. What do you see different in the “Location” column?</p>
 <p>Use the Exclude or Include buttons to further refine the results of your query and customize the data that will go into your local database. Now click the “Accept” button. This downloads the national data into your local database.</p>
 </section>
 <section id="query-against-the-local-database" class="level3">
