--- a/content/veg.html
+++ b/content/veg.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-09">
+<meta name="dcterms.date" content="2025-05-08">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 9, 2024</p>
+        <p class="date">May 8, 2025</p>
       </div>
     </div>
     
@@ -135,7 +135,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="exercise-12.2---vegetation-plot-data">Exercise 12.2 - Vegetation Plot Data</h2>
 <section id="query-and-load-data" class="level3">
 <h3 class="anchored" data-anchor-id="query-and-load-data">Query and Load Data</h3>
-<p>Query and load into your selected set data from Vegetation plot table having the “Basic NASIS Training Group” NASIS Group Name. Answer these questions:</p>
+<p>Query and load into your selected set data from Vegetation plot table having the “NASIS Training” NASIS Group Name. Answer these questions:</p>
 <ol type="1">
 <li>How many vegetation plots are there that match the criteria?</li>
 <li>Of these vegetation plots, which plant has the highest Estimated Annual Production?</li>
